--- a/about.html
+++ b/about.html
@@ -62,6 +62,11 @@
     .select-css option {
         font-weight:normal;
     }
+
+    .worldmap {
+        height: 600px;
+        width: 1500px;
+    }
     </style>
 
     <script src="js/jquery-3.2.1.slim.min.js"></script>
@@ -72,8 +77,9 @@
     <script src="js/imagesloaded.pkgd.min.js"></script>
 
     <script src="js/main.js"></script>
-    <script src="http://d3js.org/d3.v4.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
+    <!--<script src="http://d3js.org/d3.v4.js"></script>-->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   </head>
   <body>
@@ -127,53 +133,23 @@
           <select id = "visualize" class="select-css" onChange="OnSelectedIndexChange()">
             <option value="5"> Main </option>
             <option value="1"> General Information </option>
-            <option value="2"> Factor Correlation </option>
+            <option value="2"> General Factor Correlation </option>
             <option value="3"> Economy Influence </option>
             <option value="4"> Other Influence </option>
           </select>
         </div>
 
         <div id="vis-result" class="row mb-5">
-          <img src="image/visualization/wordcloud.png">
+          <div id="worldmap" class="row mb-5 worldmap"></div>
+          <img src="image/visualization/wordcloud.png"> <br>
         </div>
         <br>
-        <div id="vis-result2" class="row mb-5"></div>
 
+        <div id="vis-result2" class="row"></div> <br>
+
+        <br>
+        <div id="vis-economy" class="row mb-5"></div>
         <br><br>
-        <!--<div class="row mb-5">-->
-          <!--<div class="col-md-12">-->
-            <!--<div class="owl-carousel probootstrap-owl">-->
-              <!--<div class="item">-->
-                <!--<div class="p-4 border">-->
-                  <!--<h4> Happiness Rate </h4>-->
-                <!--</div>-->
-                <!--<img src="image/happiness_rate.png" class="img-fluid">-->
-                <!--<p> Display and compare happiness rate for different regions. </p>-->
-              <!--</div>-->
-              <!--<div class="item">-->
-                <!--<div class="p-4 border">-->
-                  <!--<h4> Economy Rate </h4>-->
-                <!--</div>-->
-                <!--<img src="image/economy_rate.png" class="img-fluid" alt="Free Template by ProBootstrap.com">-->
-                <!--<p> Display and compare happiness rate for different regions. </p>-->
-              <!--</div>-->
-              <!--<div class="item">-->
-                <!--<div class="p-4 border">-->
-                  <!--<h4> Influence Factors </h4>-->
-                <!--</div>-->
-                <!--<img src="image/factors.png" class="img-fluid" alt="Free Template by ProBootstrap.com">-->
-                <!--<p> Display different factors that counted in happiness scores</p>-->
-              <!--</div>-->
-              <!--<div class="item">-->
-                <!--<img src="image/percentage.png" class="img-fluid" alt="Free Template by ProBootstrap.com">-->
-                <!--<div class="p-4 border border-top-0">-->
-                  <!--<h4> Percentage </h4>-->
-                  <!--<p> Box plots for display in-region scale </p>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-        <!--</div>-->
 
       </div>
 
@@ -190,68 +166,63 @@
       </div>
 
     </main>
-    <!--<script>-->
-    <!--d3.csv("data/2018.csv", function(data){-->
-    <!--// List of words-->
-    <!--var myWords = ["Hello", "Everybody", "How", "Are", "You", "Today", "It", "Is", "A", "Lovely", "Day", "I", "Love", "Coding", "In", "My", "Van", "Mate"]-->
-
-    <!--// set the dimensions and margins of the graph-->
-    <!--var margin = {top: 10, right: 10, bottom: 10, left: 10},-->
-        <!--width = 450 - margin.left - margin.right,-->
-        <!--height = 450 - margin.top - margin.bottom;-->
-
-    <!--// append the svg object to the body of the page-->
-    <!--var svg = d3.select("#wordcloud").append("svg")-->
-        <!--.attr("width", width + margin.left + margin.right)-->
-        <!--.attr("height", height + margin.top + margin.bottom)-->
-      <!--.append("g")-->
-        <!--.attr("transform",-->
-              <!--"translate(" + margin.left + "," + margin.top + ")");-->
-
-    <!--var layout = d3.layout.cloud()-->
-      <!--.size([width, height])-->
-      <!--.words(myWords.map(function(d) { return {text: d}; }))-->
-      <!--.padding(10)-->
-      <!--.fontSize(60)-->
-      <!--.on("end", draw);-->
-    <!--layout.start();-->
-
-    <!--// This function takes the output of 'layout' above and draw the words-->
-    <!--// Better not to touch it. To change parameters, play with the 'layout' variable above-->
-    <!--function draw(words) {-->
-      <!--svg-->
-        <!--.append("g")-->
-          <!--.attr("transform", "translate(" + layout.size()[0] / 2 + "," + layout.size()[1] / 2 + ")")-->
-          <!--.selectAll("text")-->
-            <!--.data(words)-->
-          <!--.enter().append("text")-->
-            <!--.style("font-size", function(d) { return d.size + "px"; })-->
-            <!--.attr("text-anchor", "middle")-->
-            <!--.attr("transform", function(d) {-->
-              <!--return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";-->
-            <!--})-->
-            <!--.text(function(d) { return d.text; });-->
-      <!--}-->
-    <!--});-->
-    <!--</script>-->
 
     <script>
+
+      Plotly.d3.csv('data/2018.csv', function(err, rows){
+      function unpack(rows, key) {
+          return rows.map(function(row) { return row[key]; });
+      }
+      console.log(unpack(rows, 'postal'));
+      var data = [{
+                  type: 'choropleth',
+                  locationmode: 'country names',
+                  locations: unpack(rows, 'Country'),
+                  z: unpack(rows, 'Rank'),
+                  text: unpack(rows, 'Score'),
+                  autocolorscale: true
+              }];
+
+      var layout = {
+              title: 'World Happiness Rank in 2018',
+              geo: {
+                projection: {
+                  type: 'robinson'
+                }
+              }
+          };
+          Plotly.plot(worldmap, data, layout, {showLink: false});
+      });
+
       function OnSelectedIndexChange()
         {
         var img = document.createElement("img");
         var img2 = document.createElement("img");
+        var img3 = document.createElement("img");
+
+        var img_e1 = document.createElement("img");
+        var img_e2 = document.createElement("img");
+        var img_e3 = document.createElement("img");
+        var img_e4 = document.createElement("img");
+        var img_e5 = document.createElement("img");
+        var img_e6 = document.createElement("img");
+
         var result = document.getElementById("vis-result");
         var result2 = document.getElementById("vis-result2");
+        var result3 = document.getElementById("vis-result3");
+        var res_economy = document.getElementById("vis-economy");
 
         if (document.getElementById('visualize').value == "5"){
           $('#vis-result').empty();
           $('#vis-result2').empty();
+          $('#vis-economy').empty();
           img.src = "image/visualization/wordcloud.png";
           result.appendChild(img);
         }
         else if (document.getElementById('visualize').value == "1"){
           $('#vis-result').empty();
           $('#vis-result2').empty();
+          $('#vis-economy').empty();
           img.src = "image/visualization/happiness_rate.png";
           img2.src = "image/visualization/percentage.png";
           result.appendChild(img);
@@ -259,20 +230,41 @@
         }
         else if (document.getElementById('visualize').value == "2"){
           img.src = "image/visualization/correlation.png";
+          img2.src = "image/visualization/correlation_2.png";
           $('#vis-result').empty();
           $('#vis-result2').empty();
+          $('#vis-economy').empty();
           result.appendChild(img);
+          result2.appendChild(img2);
         }
         else if (document.getElementById('visualize').value == "3"){
-          img.src = "image/visualization/economy_rate.png";
+          img.src = "image/visualization/happiness_economy.png";
+          img2.src = "image/visualization/happiness_economy.jpg";
           $('#vis-result').empty();
           $('#vis-result2').empty();
+          $('#vis-economy').empty();
+
           result.appendChild(img);
+          result2.appendChild(img2);
+
+          img_e1.src = "image/visualization/health_economy.png";
+          res_economy.appendChild(img_e1);
+          img_e2.src = "image/visualization/family_economy.png";
+          res_economy.appendChild(img_e2);
+          img_e3.src = "image/visualization/freedom_economy.png";
+          res_economy.appendChild(img_e3);
+          img_e4.src = "image/visualization/generosity_economy.png";
+          res_economy.appendChild(img_e4);
+          img_e5.src = "image/visualization/trust_economy.png";
+          res_economy.appendChild(img_e5);
+          img_e6.src = "image/visualization/dystopia_economy.png";
+          res_economy.appendChild(img_e6);
         }
         else if (document.getElementById('visualize').value == "4"){
-          img.src = "image/prediction/randomtree.png";
+          img.src = "image/visualization/health_family.png";
           $('#vis-result').empty();
           $('#vis-result2').empty();
+          $('#vis-economy').empty();
           result.appendChild(img);
         }
       }
