--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
             <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="about.html">Visualization</a></li>
             <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="services.html">Search</a></li>
             <li class="probootstrap-animate active" data-animate-effect="fadeInLeft"><a href="portfolio.html">Prediction</a></li>
-            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="contact.html">Report</a></li>
+            <li class="probootstrap-animate" data-animate-effect="fadeInLeft"><a href="report/Proposal_for_Data_Science.pdf" download>Report</a></li>
           </ul>
         </nav>
         <footer class="probootstrap-aside-footer probootstrap-animate" data-animate-effect="fadeInLeft">
@@ -113,7 +113,7 @@
           <div class="col-xl-8 col-lg-12">
             <div class="row">
               <div class="col-xl-8 col-lg-12 mx-auto">
-                <h1 class="mb-3"> Predict Your Happiness Score </h1>
+                <h3 class="mb-5"> Predict Your Happiness Score </h3>
               </div>
             </div>
           </div>
